--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,10 +8,19 @@ html
 
 		link(rel="stylesheet", type="text/css", href="/css/styles.css")
 	body
-		
-		
+		.Container
+			.Form__row
+				label
+					span.Form__label Display Locale
+					select.FormControl#display-locale
+						option(value="") Loading
+			.Form__row
+				label
+					span.Form__label Country
+					input.FormControl#country-selector(type="search" autocomplete="country-name" name="country" autofocus)
+
 		if debug
-			script(src="//localhost:35729/livereload.js")
-			<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':8080/js/app.js" async defer></' + 'script>')</script>
+			<script>document.write('<script src="//' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js"></' + 'script>')</script>
+			<script>document.write('<script src="//' + (location.host || 'localhost').split(':')[0] + ':8080/js/app.js" async defer></' + 'script>')</script>
 		else
 			script(src="./js/app.js" async defer)
