Fix bug when bluring after not selecting

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,7 +6,7 @@ html
 			
 		title Country Selector
 
-		link(rel="stylesheet", type="text/css", href="/css/styles.css")
+		link(rel="stylesheet", type="text/css", href="./css/styles.css")
 	body
 		.Container
 			.Form__row
